--- a/user-service.yml
+++ b/user-service.yml
@@ -6,14 +6,18 @@ spring:
     name: user-service
 
   datasource:
-    url: jdbc:mysql://localhost:3306/cropdeal_users
+    url: jdbc:mysql://localhost:3306/cropdeal_user
     username: root
-    password: password
-
+    password: Shubh28gaikwad@
+    
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
+
 
 eureka:
   client:
